--- a/src/Admin/pages/styles.scss
+++ b/src/Admin/pages/styles.scss
@@ -1,6 +1,5 @@
 body {
   background: #f4f4f4 !important;
-
   --black: #717e91;
   --white: #fff;
   --green: #73b704;
@@ -55,7 +54,7 @@ body {
 
   .contentForm {
     width: 400px;
-    background: #ffffff;
+    // background: #ffffff;
     border-radius: 33px;
     padding-bottom: 2em;
     position: relative;
@@ -71,8 +70,6 @@ body {
       width: 85%;
       margin-top: 30px;
 
-      
-
       .link {
         color: var(--orange);
       }
@@ -81,6 +78,8 @@ body {
         margin-top: 0;
         margin-bottom: 0;
         color: var(--orange);
+        font-size: 2em;
+        line-height: 2em;
       }
       p {
         font-size: 1.2em;
@@ -88,17 +87,15 @@ body {
         margin-bottom: 0;
       }
 
-      .Pmargin{
+      .Pmargin {
         margin-bottom: 1.5em;
       }
 
       .inputContainter {
-    
-
         .input {
           border-radius: 6px;
           border-style: solid;
-          border-color: #ededed;
+          border-color: #2c2c2c7a;
           border-width: 2px;
           height: 53px;
           position: relative;
@@ -115,7 +112,7 @@ body {
             top: 0px;
             transform: translateY(-50%);
             font-size: 1em;
-            background: white;
+            background:#F4F4F4;
             padding-left: 10px;
             padding-right: 10px;
 
@@ -203,11 +200,9 @@ body {
           }
         }
 
-
-
         .inputTextarea {
           height: auto;
-         
+
           margin-top: 1em;
         }
 
@@ -216,7 +211,7 @@ body {
         }
       }
 
-      .inputFileContainer{
+      .inputFileContainer {
         margin-top: 1.5em;
       }
 
@@ -273,11 +268,9 @@ body {
         margin-bottom: 30px;
       }
 
-
-      .inputMargin{
+      .inputMargin {
         margin-bottom: 1em !important;
       }
-
     }
   }
 
@@ -305,10 +298,9 @@ body {
       }
     }
 
-    .Pmargin{
+    .Pmargin {
       margin-bottom: 4em;
     }
-
   }
 }
 
@@ -365,20 +357,20 @@ body {
 
         gap: 1.8em;
         margin-top: 1.5em;
-*{
-  transition: transform 1s  ease .1s, opacity 0.3s ease;
-}
+        * {
+          transition: transform 1s ease 0.1s, opacity 0.3s ease;
+        }
         .logoResto {
           width: 90px;
           height: 90px;
           overflow: hidden;
           border-radius: 50%;
           transition: 0.3s;
-          img{
+          img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-         
+
             transform: rotate(1turn) scale(1.4);
             // transition: transform 0.3s .3s;
           }
@@ -742,6 +734,10 @@ body {
                 padding-bottom: 7px;
                 padding-top: 7px;
                 width: calc(100% - 20px);
+                a{
+                  display: inline-block;
+                  width: 100%;
+                }
 
                 cursor: pointer;
                 &:last-child {
@@ -974,7 +970,6 @@ body {
                 font-size: 1em;
               }
             }
-
           }
 
           .statValue {
@@ -1605,7 +1600,7 @@ body {
   align-items: center;
   .text {
     width: 60%;
-    @media all and (max-width:750px){
+    @media all and (max-width: 750px) {
       width: 100%;
     }
     .t1 {
@@ -1890,9 +1885,8 @@ body {
     display: flex;
     justify-content: space-between;
 
-    @media all and (max-width:1070px){
+    @media all and (max-width: 1070px) {
       flex-wrap: wrap;
-      
     }
 
     .head_statItem {
@@ -1928,9 +1922,8 @@ body {
 
     .contentForm {
       width: 68%;
-      @media all and (max-width:1070px){
-       width: 100%;
-        
+      @media all and (max-width: 1070px) {
+        width: 100%;
       }
     }
     .BoxOpenDay {
@@ -1944,10 +1937,9 @@ body {
       margin-top: 1em;
       padding-bottom: 2em;
 
-      @media all and (max-width:1070px){
+      @media all and (max-width: 1070px) {
         width: 100%;
-         
-       }
+      }
 
       &__struct {
         width: 83%;
@@ -1971,20 +1963,18 @@ body {
             margin-bottom: 2em;
             .checkDay {
               font-size: 1.3em;
-              input{
+              input {
                 margin: 0;
-                margin-right: .5em;
+                margin-right: 0.5em;
                 // accent-color: var(--orange);
-             
               }
             }
             .containHours {
-              
               display: flex;
               justify-content: space-between;
               gap: 1em;
 
-              @media all and (max-width:1755px){
+              @media all and (max-width: 1755px) {
                 flex-wrap: wrap;
                 gap: 0.2em;
               }
@@ -2001,8 +1991,8 @@ body {
 
                 align-items: center;
 
-                @media all and (max-width:1755px){
-                 width: 100%;
+                @media all and (max-width: 1755px) {
+                  width: 100%;
                 }
 
                 label {
@@ -2027,16 +2017,43 @@ body {
           }
         }
 
-        button{
+        button {
           width: 100%;
           height: 60px;
           border-radius: 6px;
           color: white;
           font-family: inherit;
-          background: #2BC155;
+          background: #2bc155;
           font-size: 1em;
         }
       }
     }
   }
+}
+
+
+.coverContainer{
+  width: 100%;
+  overflow: hidden;
+  height: auto;
+  display: grid;
+  place-items: center;
+  position: relative;
+  padding-bottom: 8px;
+  border-radius: 0px 0px 35px 35px;
+  .backgroundCover{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    filter: brightness(50%);
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+}
+
+
+.coverContainerOFF{
+height: 0;
+padding-bottom: 0px;
 }
